# Team-65-SE-Term-Project

./: CMakeCache.txt  CMakeLists.txt  Credentials  Database.js  Makefile  README.md  Server.js  announcement.model.js  backendtest.cpp  cmake_install.cmake  package-lock.json  package.json  questclock.cpp  questclock.js  request.cpp  request.h  server.js
.github/workflows/: codeql.yml
Dev/CURL2/lib/pkgconfig/: libcurl.pc
Dev/CURL2/share/man/man3/: CURLINFO_ACTIVESOCKET.3  CURLINFO_APPCONNECT_TIME.3  CURLINFO_APPCONNECT_TIME_T.3  CURLINFO_CAINFO.3  CURLINFO_CAPATH.3  CURLINFO_CERTINFO.3  CURLINFO_CONDITION_UNMET.3  CURLINFO_CONNECT_TIME.3  CURLINFO_CONNECT_TIME_T.3  CURLINFO_CONN_ID.3  CURLINFO_CONTENT_LENGTH_DOWNLOAD.3  CURLINFO_CONTENT_LENGTH_DOWNLOAD_T.3  CURLINFO_CONTENT_LENGTH_UPLOAD.3  CURLINFO_CONTENT_LENGTH_UPLOAD_T.3  CURLINFO_CONTENT_TYPE.3  CURLINFO_COOKIELIST.3  CURLINFO_EFFECTIVE_METHOD.3  CURLINFO_EFFECTIVE_URL.3  CURLINFO_FILETIME.3  CURLINFO_FILETIME_T.3  CURLINFO_FTP_ENTRY_PATH.3  CURLINFO_HEADER_SIZE.3  CURLINFO_HTTPAUTH_AVAIL.3  CURLINFO_HTTP_CONNECTCODE.3  CURLINFO_HTTP_VERSION.3  CURLINFO_LASTSOCKET.3  CURLINFO_LOCAL_IP.3  CURLINFO_LOCAL_PORT.3  CURLINFO_NAMELOOKUP_TIME.3  CURLINFO_NAMELOOKUP_TIME_T.3  CURLINFO_NUM_CONNECTS.3  CURLINFO_OS_ERRNO.3  CURLINFO_PRETRANSFER_TIME.3  CURLINFO_PRETRANSFER_TIME_T.3  CURLINFO_PRIMARY_IP.3  CURLINFO_PRIMARY_PORT.3  CURLINFO_PRIVATE.3  CURLINFO_PROTOCOL.3  CURLINFO_PROXYAUTH_AVAIL.3  CURLINFO_PROXY_ERROR.3  (+456 more)
Dev/CURLLIBTEST/: main.cpp
models/: announcement.model.js  notification.model.js  project.models.js  time.model.js  timetable.model.js  totaltime.model.js  user.model.js
src/: AchNotWindow.h  Achievements.h  Button.h  LoginWindow.h  MainWindow.h  ProjectWindow.h  Textbox.h  TimesWindow.h  UserAccount.cpp  UserAccount.h  UserRoles.cpp  Windows.h  backendtest.cpp  main.cpp  request.cpp  request.h
test-unit/: test.cpp
